<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/inputCardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/inputCardNum"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/inputCardName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputExpireyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/inputExpieryDate" />

    <EditText
        android:id="@+id/inputCardCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/inputCardCVV"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:hint="@string/btnUpdate"
        android:text="Update"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="10dp" />


</LinearLayout>