<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayCardDetails"
    android:background="@drawable/purple">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="367dp"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#ECE6E7"
            android:transitionGroup="false">


            <TextView
                android:id="@+id/txt_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/txtPayment"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="#D8D0D0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPay"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/btnPay"
                android:text="PayNow"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtCardNum"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"

                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/txtCardNum"
                android:padding="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.178" />

            <TextView
                android:id="@+id/txtCardName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/txtCardName"
                android:padding="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.361" />

            <ImageView
                android:id="@+id/img_name"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtCardName"
                app:layout_constraintEnd_toEndOf="@+id/txtCardName"
                app:layout_constraintHorizontal_bias="0.936"
                app:layout_constraintStart_toStartOf="@+id/txtCardName"
                app:layout_constraintTop_toTopOf="@+id/txtCardName"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/baseline_supervised_user_circle" />

            <ImageView
                android:id="@+id/img_cardType"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtCardNum"
                app:layout_constraintEnd_toEndOf="@+id/txtCardNum"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="@+id/txtCardNum"
                app:layout_constraintTop_toTopOf="@+id/txtCardNum"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/baseline_credit_card" />

            <TextView
                android:id="@+id/txtExpireyDate"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/txtExpiryDate"
                android:padding="8dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCardName"
                app:layout_constraintVertical_bias="0.023" />

            <ImageView
                android:id="@+id/img_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtExpireyDate"
                app:layout_constraintEnd_toEndOf="@+id/txtExpireyDate"
                app:layout_constraintHorizontal_bias="0.875"
                app:layout_constraintStart_toStartOf="@+id/txtExpireyDate"
                app:layout_constraintTop_toTopOf="@+id/txtExpireyDate"
                app:layout_constraintVertical_bias="0.55"
                app:srcCompat="@drawable/baseline_date" />

            <TextView
                android:id="@+id/txtCardCVV"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/custom_edittext"
                android:backgroundTint="#D8D0D0"
                android:drawablePadding="8dp"
                android:hint="@string/txtCardCVV"
                android:padding="8dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.831"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCardName"
                app:layout_constraintVertical_bias="0.028" />

            <ImageView
                android:id="@+id/img_cvv"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtCardCVV"
                app:layout_constraintEnd_toEndOf="@+id/txtCardCVV"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="@+id/txtCardCVV"
                app:layout_constraintTop_toTopOf="@+id/txtCardCVV"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/baseline_key_24" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginStart="-5dp"
                android:backgroundTint="#F30031"
                android:hint="@string/btnDelete"
                android:text="Delete"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtExpireyDate"
                app:layout_constraintVertical_bias="0.322" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginEnd="-5dp"
                android:backgroundTint="#8A8987"
                android:hint="@string/btnEdit"
                android:text="Edit"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.844"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCardCVV"
                app:layout_constraintVertical_bias="0.318" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>