<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Payment"
    android:background="@drawable/purple">


    <androidx.cardview.widget.CardView
        android:layout_width="367dp"
        android:layout_height="400dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#ECE6E7"
            android:transitionGroup="false">


            <TextView
                android:id="@+id/txt_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txtPayment"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="#D8D0D0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.153" />


            <Button
                android:id="@+id/btnPayNow"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginBottom="44dp"
                android:backgroundTint="#4CE15F"
                android:hint="@string/btnPayNow"
                android:text="Pay Now"
                android:textColor="#000000"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnSaveCard"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginBottom="120dp"
                android:backgroundTint="#FF5722"
                android:hint="@string/btnSaveCard"
                android:text="Save Card"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>